Fix bug in studio +Fix dark mode for dodo, fractal, icebreaker, texasholdem, zola

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -1891,6 +1891,10 @@ select.colorselector {
   background-color: var(--dark-10);
 }
 
+#resultDlgFrame {
+  filter: var(--ext-bright);
+}
+
 /* page loading */
 .roundedbox_topleft,
 .roundedbox_topmain,
