--- a/src/css/games/fractal.less
+++ b/src/css/games/fractal.less
@@ -4,4 +4,8 @@ html[data-theme=dark] {
 	div[class^="icon_placed_tiles"] {
 		filter: var(--drop-shadow);
 	}
+
+	#board {
+		filter: var(--ext-bright);
+	}
 }
