--- a/src/css/games/texasholdem.less
+++ b/src/css/games/texasholdem.less
@@ -10,4 +10,15 @@ html[data-theme=dark] {
 	.label {
 		color: var(--light-70);
 	}
+
+	#table:before {
+		content: "";
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
+		background: #00000060;
+		border-radius: 300px;
+	}
 }
